$wolfyjade-uptime-kuma/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.1.0
  name: uptime-kuma-status-wolfyja-de
  namespace: wolfyjade-uptime-kuma
spec:
  hostnames:
  - status.wolfyja.de
  parentRefs:
  - name: gateway
    namespace: gateway
  rules:
  - backendRefs:
    - name: uptime-kuma
      port: 3001
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents: []
